--- a/src/app/admin/table-admin/table-admin.component.scss
+++ b/src/app/admin/table-admin/table-admin.component.scss
@@ -1,1 +1,18 @@
-
+.no-results{
+  width: 100%;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  gap: 20px;
+  p{
+    color: var(--primary-black);
+    font-size: 20px;
+    font-family: Bold;
+  }
+  img{
+    width: 100px;
+  }
+}
