--- a/src/app/admin/tracks/tracks-search-form/tracks-search-form.component.scss
+++ b/src/app/admin/tracks/tracks-search-form/tracks-search-form.component.scss
@@ -2,5 +2,19 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-
+  column-gap: 20px;
+  row-gap: 0;
+  mat-form-field{
+    flex: 1 25%;
+  }
 }
+.buttons {
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  button{
+    flex: 1 50%;
+  }
+}
+
