--- a/src/app/playlists/create-playlist-dialog/create-playlist-dialog.component.html
+++ b/src/app/playlists/create-playlist-dialog/create-playlist-dialog.component.html
@@ -19,23 +19,25 @@
             <button mat-menu-item (click)="removeImage()">Remove image</button>
           </mat-menu>
         </div>
-
         <input type="file" formControlName="image" #imageUpload accept="image/jpeg,image/png,image/jpg" hidden (change)="onFileSelected($event)"/>
       </div>
       <div class="left">
         <div class="form-group name">
-          <label class="label" for="name">Name of playlist</label>
-          <input type="text" id="name" name="name" placeholder="Name" formControlName="title"/>
-          @if (playlist.controls.title.hasError('required')) {
-            <mat-error>
-              Title is required
-            </mat-error>
-          }
-          @if (playlist.controls.title.hasError('maxlength')) {
-            <mat-error>
-              Max length is 100 characters
-            </mat-error>
-          }
+          <mat-form-field appearance="outline" floatLabel="always">
+            <mat-label>Name of playlist</mat-label>
+            <input matInput formControlName="title" placeholder="Name"/>
+            @if (playlist.get('title')?.hasError('required')) {
+              <mat-error>
+                Title is required
+              </mat-error>
+            }
+            @if (playlist.get('title')?.hasError('maxlength')) {
+              <mat-error>
+                Max length is 100 characters
+              </mat-error>
+            }
+          </mat-form-field>
+
         </div>
         <div class="form-group">
           <label class="label" for="description">Description</label>
