loader interceptor and dialogs

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -601,6 +601,13 @@ input[type=email], input[type=password], textarea{
 .admin{
   background: var(--light);
   min-height: 100vh;
+  .search-container{
+    border-radius: 10px;
+    padding: 20px;
+    border: 1px solid var(--gray);
+    margin-bottom: 20px;
+    padding-bottom: 0;
+  }
   h1{
     color: var(--secondary-black);
     margin-bottom: 20px;
@@ -609,7 +616,7 @@ input[type=email], input[type=password], textarea{
     margin-bottom: 20px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     .search{
       display: flex;
@@ -670,7 +677,7 @@ input[type=email], input[type=password], textarea{
   z-index: 2;
 }
 .dialog{
-  min-width: 400px;
+  min-width: 450px;
   background: var(--light);
   border-radius: 5px;
   .mdc-dialog__title{
