--- a/src/app/admin/table-admin/table-admin.component.html
+++ b/src/app/admin/table-admin/table-admin.component.html
@@ -1,23 +1,24 @@
 <div class="container-padding admin">
-  <h1>Manage {{title}}</h1>
-  @switch (title.toLowerCase()) {
-    @case ('tracks') {
-      <app-tracks-search-form></app-tracks-search-form>
+  <div class="search-container">
+    <h1>Search {{title}}</h1>
+    @switch (title.toLowerCase()) {
+      @case ('tracks') {
+        <app-tracks-search-form></app-tracks-search-form>
+      }
+      @case ('albums') {
+        <app-albums-search-form></app-albums-search-form>
+      }
+      @case ('genres') {
+        <app-genre-search-form></app-genre-search-form>
+      }
+      @case ('users') {
+        <app-user-search-form></app-user-search-form>
+      }
+      @case ('artists') {
+        <app-artist-search-form></app-artist-search-form>
+      }
     }
-    @case ('albums') {
-      <app-albums-search-form></app-albums-search-form>
-    }
-    @case ('genres') {
-      <app-genre-search-form></app-genre-search-form>
-    }
-    @case ('users') {
-      <app-user-search-form></app-user-search-form>
-    }
-    @case ('artists') {
-      <app-artist-search-form></app-artist-search-form>
-    }
-  }
-
+  </div>
   <div class="actions">
     <div class="admin-actions">
       <button mat-raised-button class="button add" (click)="openAddDialog()"><mat-icon>create</mat-icon> Add new</button>
@@ -25,6 +26,7 @@
       <button mat-raised-button class="button delete" (click)="deleteSelected()" [disabled]="_selectionService.selectedItems().length === 0" matBadge="{{_selectionService.selectedItems().length}}" matBadgeSize="medium"><mat-icon>delete_sweep</mat-icon> Delete selected</button>
     </div>
   </div>
+
   @if(data && data.total > 0) {
     <table class="admin-table">
       <thead>
