--- a/src/app/admin/users/add-user-dialog/add-user-dialog.component.html
+++ b/src/app/admin/users/add-user-dialog/add-user-dialog.component.html
@@ -1,1 +1,35 @@
-<p>add-user-dialog works!</p>
+<div class="dialog">
+  <h1 mat-dialog-title>Create new user</h1>
+  <div mat-dialog-content>
+    <form [formGroup]="userGroup">
+      <mat-form-field appearance="outline" floatLabel="always">
+        <mat-label>First name</mat-label>
+        <input matInput type="text" placeholder="Enter first name" formControlName="firstName"/>
+        @if (userGroup.get('firstName')?.hasError('required')) {
+          <mat-error>First name is required.</mat-error>
+        }
+      </mat-form-field>
+      <mat-form-field appearance="outline" floatLabel="always">
+        <mat-label>Last name</mat-label>
+        <input matInput type="text" placeholder="Enter last name" formControlName="lastName"/>
+        @if (userGroup.get('lastName')?.hasError('required')) {
+          <mat-error>Last name is required.</mat-error>
+        }
+      </mat-form-field>
+      <mat-form-field appearance="outline" floatLabel="always">
+        <mat-label>Email</mat-label>
+        <input matInput type="text" placeholder="Enter email" formControlName="email"/>
+        @if (userGroup.get('email')?.hasError('required')) {
+          <mat-error>Email is required.</mat-error>
+        }
+        @if (userGroup.get('email')?.hasError('email')) {
+          <mat-error>Email is in wrong format.</mat-error>
+        }
+      </mat-form-field>
+    </form>
+  </div>
+  <div mat-dialog-actions>
+    <button mat-button>Create</button>
+    <button mat-button mat-dialog-close>Cancel</button>
+  </div>
+</div>
