--- a/src/app/playlists/create-playlist-dialog/create-playlist-dialog.component.html
+++ b/src/app/playlists/create-playlist-dialog/create-playlist-dialog.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>Create new playlist</h2>
-<mat-dialog-content>
+<div mat-dialog-content >
   <form class="form" [formGroup]="playlist" enctype="multipart/form-data">
     <div class="form-group top">
       <div class="right">
@@ -23,7 +23,7 @@
       </div>
       <div class="left">
         <div class="form-group name">
-          <mat-form-field appearance="outline" floatLabel="always">
+          <mat-form-field appearance="outline" floatLabel="always" class="white-form-field">
             <mat-label>Name of playlist</mat-label>
             <input matInput formControlName="title" placeholder="Name"/>
             @if (playlist.get('title')?.hasError('required')) {
@@ -62,8 +62,8 @@
     </div>
 
   </form>
-</mat-dialog-content>
-<mat-dialog-actions>
+</div>
+<div mat-dialog-actions>
   <button mat-button mat-dialog-close class="cancel">Cancel</button>
   <button mat-button cdkFocusInitial  (click)="confirm()" class="create">Create</button>
-</mat-dialog-actions>
+</div>
