--- a/src/app/admin/tracks/tracks-form-dialog/tracks-form-dialog.component.html
+++ b/src/app/admin/tracks/tracks-form-dialog/tracks-form-dialog.component.html
@@ -16,6 +16,46 @@
           <mat-error>Title is required</mat-error>
         }
       </mat-form-field>
+
+      <div class="file-input">
+        <div class="input">
+          <input type="file" hidden #imageFile (change)="onFileSelected($event, 'cover')" [accept]="imageTypes"/>
+          @if (this.group.get('cover') && data.isEdit) {
+            <div class="image">
+              <p>Current image: </p>
+              @if (data.item.cover) {
+                <img src="{{data.item.cover}}"/>
+              } @else {
+                @if (group.get('cover')?.value) {
+                  <img src="{{selectedImageSrc}}"/>
+                } @else {
+                  None
+                }
+              }
+            </div>
+            <button mat-stroked-button (click)="imageFile.click()">Change image</button>
+          } @else {
+            <p>Choose cover image</p>
+            <button mat-stroked-button (click)="imageFile.click()">Select</button>
+          }
+        </div>
+
+      </div>
+
+
+      <!--      <app-image-form-field [data]="data" [style.flex]="'1 290px'"></app-image-form-field>-->
+      <!--<div class="file-input">
+        <div class="input">
+          @if (data.isEdit) {
+            <img src="{{data.item.cover}}"/>
+            <button>Change image</button>
+          } @else {
+            <p>Choose cover image</p>
+            <button>Select</button>
+          }
+        </div>
+
+      </div>-->
       <mat-form-field appearance="outline" floatLabel="always">
         <mat-label>Owner</mat-label>
         <mat-select formControlName="owner" placeholder="Select owner of the track" [compareWith]="compareOwners">
