--- a/src/styles.scss
+++ b/src/styles.scss
@@ -677,7 +677,7 @@ input[type=email], input[type=password], textarea{
   z-index: 2;
 }
 .dialog{
-  min-width: 450px;
+  min-width: 350px;
   background: var(--light);
   border-radius: 5px;
   .mdc-dialog__title{
@@ -695,10 +695,40 @@ input[type=email], input[type=password], textarea{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    row-gap: 0;
+    row-gap: 5px;
+    column-gap: 25px;
     .mat-mdc-form-field{
       flex: 1 290px;
     }
+    .file-input{
+      height: 80px;
+      flex: 1 290px;
+      display: flex;
+      flex-direction: column;
+      .input{
+        height: 56px;
+        width: 100%;
+        border: 1px solid #9b9b9b;
+        border-radius: 4px;
+        padding: 8px 16px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        img{
+          height: 100%;
+          width: auto;
+        }
+        .image{
+          height: 100%;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          gap: 5px;
+        }
+      }
+    }
+
   }
 }
 .mdc-list-item__primary-text{
