track form dialog form data

--- a/src/app/admin/tracks/tracks-form-dialog/tracks-form-dialog.component.html
+++ b/src/app/admin/tracks/tracks-form-dialog/tracks-form-dialog.component.html
@@ -35,7 +35,16 @@
             </div>
             <button mat-stroked-button (click)="imageFile.click()">Change image</button>
           } @else {
-            <p>Choose cover image</p>
+            <div class="image">
+              <p>Image:</p>
+              @if (group.get('cover')?.value) {
+                <img src="{{selectedImageSrc}}"/>
+              } @else {
+                None
+              }
+            </div>
+
+
             <button mat-stroked-button (click)="imageFile.click()">Select</button>
           }
         </div>
