admin albums search update

--- a/src/app/admin/albums/albums-search-form/albums-search-form.component.html
+++ b/src/app/admin/albums/albums-search-form/albums-search-form.component.html
@@ -5,6 +5,10 @@
   </mat-form-field>
 
   <mat-form-field appearance="outline" floatLabel="always">
+    <mat-label>Master</mat-label>
+    <input type="text" matInput placeholder="Search by master" formControlName="master"/>
+  </mat-form-field>
+  <mat-form-field appearance="outline" floatLabel="always">
     <mat-label>No. of tracks from</mat-label>
     <input type="number" matInput placeholder="Enter starting value" formControlName="tracksCountFrom"/>
   </mat-form-field>
