--- a/src/app/admin/albums/albums.component.html
+++ b/src/app/admin/albums/albums.component.html
@@ -2,5 +2,5 @@
 <app-table-admin
   [title]="'Albums'"
   [data]="adminAlbumService.albums$ | async"
-  [columns]="['Name', 'No. of Tracks', 'Release Year', 'Created at', 'Updated at']"
+  [columns]="['Name', 'Master', 'No. of Tracks', 'Release Year', 'Created at', 'Updated at']"
 ></app-table-admin>
