--- a/src/app/admin/table-admin/table-admin.component.html
+++ b/src/app/admin/table-admin/table-admin.component.html
@@ -1,158 +1,161 @@
 <div class="container-padding admin">
-  <div class="search-container">
-    <h1>Search {{title}}</h1>
-    @switch (title.toLowerCase()) {
-      @case ('tracks') {
-        <app-tracks-search-form></app-tracks-search-form>
-      }
-      @case ('albums') {
-        <app-albums-search-form></app-albums-search-form>
-      }
-      @case ('genres') {
-        <app-genre-search-form></app-genre-search-form>
-      }
-      @case ('users') {
-        <app-user-search-form></app-user-search-form>
-      }
-      @case ('artists') {
-        <app-artist-search-form></app-artist-search-form>
-      }
-    }
-  </div>
-  <div class="actions">
-    <div class="admin-actions">
-      <button mat-raised-button class="button add" (click)="openAddDialog()"><mat-icon>create</mat-icon> Add new</button>
-      <button mat-raised-button class="button default" (click)="unselectAll()" [disabled]="_selectionService.selectedItems().length === 0"><mat-icon>indeterminate_check_box</mat-icon> Unselect</button>
-      <button mat-raised-button class="button delete" (click)="deleteSelected()" [disabled]="_selectionService.selectedItems().length === 0" matBadge="{{_selectionService.selectedItems().length}}" matBadgeSize="medium"><mat-icon>delete_sweep</mat-icon> Delete selected</button>
-    </div>
-  </div>
-
-  @if(data && data.total > 0) {
-    <table class="admin-table">
-      <thead>
-      <tr>
-        <th>
-          <mat-checkbox (change)="onSelectAll($event)" #selectAll></mat-checkbox>
-        </th>
-        <th>#</th>
-        @for (column of columns; track column) {
-          <th>{{column}}</th>
+    <div class="search-container">
+      <h1>Search {{title}}</h1>
+      @switch (title.toLowerCase()) {
+        @case ('tracks') {
+          <app-tracks-search-form></app-tracks-search-form>
         }
-        <th></th>
-      </tr>
-      </thead>
-      <tbody>
-        @for (item of data?.data; track item.id; let index = $index) {
-          <tr>
-            <td>
-              <mat-checkbox (change)="onSelectChange($event, item)" [checked]="_selectionService.selectedItems().includes(item.id)"></mat-checkbox>
-            </td>
-            <td>{{data!.from + index}}</td>
-            @for (column of columns; track column) {
-              @switch (column) {
-                @case ('Title') {
-                  <td>{{item.title}}</td>
-                }
-                @case ('Name') {
-                  <td>{{item.name}}</td>
-                }
-                @case ('Artist') {
-                  <td class="cover-text">
-                    <img src="{{item.cover}}"/>
-                    {{item.name}}
-                  </td>
-                }
-                @case ('No. of Tracks') {
-                  @if (item.hasOwnProperty('own_tracks_count')) {
-                    <td>{{item.own_tracks_count}}</td>
-                  } @else {
-                    <td>{{item.tracks_count}}</td>
+        @case ('albums') {
+          <app-albums-search-form></app-albums-search-form>
+        }
+        @case ('genres') {
+          <app-genre-search-form></app-genre-search-form>
+        }
+        @case ('users') {
+          <app-user-search-form></app-user-search-form>
+        }
+        @case ('artists') {
+          <app-artist-search-form></app-artist-search-form>
+        }
+      }
+    </div>
+    <div class="actions">
+      <div class="admin-actions">
+        <button mat-raised-button class="button add" (click)="openAddDialog()"><mat-icon>create</mat-icon> Add new</button>
+        <button mat-raised-button class="button default" (click)="unselectAll()" [disabled]="_selectionService.selectedItems().length === 0"><mat-icon>indeterminate_check_box</mat-icon> Unselect</button>
+        <button mat-raised-button class="button delete" (click)="deleteSelected()" [disabled]="_selectionService.selectedItems().length === 0" matBadge="{{_selectionService.selectedItems().length}}" matBadgeSize="medium"><mat-icon>delete_sweep</mat-icon> Delete selected</button>
+      </div>
+    </div>
+
+    @if(data && data.total > 0) {
+      <table class="admin-table">
+        <thead>
+        <tr>
+          <th>
+            <mat-checkbox (change)="onSelectAll($event)" #selectAll></mat-checkbox>
+          </th>
+          <th>#</th>
+          @for (column of columns; track column) {
+            <th>{{column}}</th>
+          }
+          <th></th>
+        </tr>
+        </thead>
+        <tbody>
+          @for (item of data?.data; track item.id; let index = $index) {
+            <tr>
+              <td>
+                <mat-checkbox (change)="onSelectChange($event, item)" [checked]="_selectionService.selectedItems().includes(item.id)"></mat-checkbox>
+              </td>
+              <td>{{data!.from + index}}</td>
+              @for (column of columns; track column) {
+                @switch (column) {
+                  @case ('Title') {
+                    <td>{{item.title}}</td>
+                  }
+                  @case ('Name') {
+                    <td>{{item.name}}</td>
+                  }
+                  @case ('Master') {
+                    <td>{{item.artist.name}}</td>
+                  }
+                  @case ('Artist') {
+                    <td class="cover-text">
+                      <img src="{{item.cover}}"/>
+                      {{item.name}}
+                    </td>
+                  }
+                  @case ('No. of Tracks') {
+                    @if (item.hasOwnProperty('own_tracks_count')) {
+                      <td>{{item.own_tracks_count}}</td>
+                    } @else {
+                      <td>{{item.tracks_count}}</td>
+                    }
+                  }
+                  @case ('Release Year') {
+                    <td>{{item.release_year}}</td>
+                  }
+                  @case ('Owner') {
+                    <td>{{item.owner.name}}</td>
+                  }
+                  @case ('First Name') {
+                    <td>{{item.first_name}}</td>
+                  }
+                  @case ('Last Name') {
+                    <td>{{item.last_name}}</td>
+                  }
+                  @case ('Email') {
+                    <td>{{item.email}}</td>
+                  }
+                  @case ('Active') {
+                    <td>{{item.active | humanizeBoolean}}</td>
+                  }
+                  @case ('Featuring') {
+                    <td>
+                      @for (feature of item.features; track feature.id; let fIndex = $index) {
+                        {{feature.name}}@if(fIndex != item.features.length - 1) {,}
+                      } @empty {
+                        /
+                      }
+                      }
+                  @case ('Album') {
+                    <td>{{item.album ? item.album.name : '/'}}</td>
+                  }
+                  @case ('Plays') {
+                    <td>{{item.track_plays_count | number}}</td>
+                  }
+                  @case ('Explicit') {
+                    <td>{{item.explicit | humanizeBoolean}}</td>
+                  }
+                  @case ('Created at') {
+                    <td>{{item.created_at | date}}</td>
+                  }
+                  @case ('Updated at') {
+                    <td>{{item.updated_at | date}}</td>
+                  }
+                  @default {
+                    <td></td>
                   }
                 }
-                @case ('Release Year') {
-                  <td>{{item.release_year}}</td>
-                }
-                @case ('Owner') {
-                  <td>{{item.owner.name}}</td>
-                }
-                @case ('First Name') {
-                  <td>{{item.first_name}}</td>
-                }
-                @case ('Last Name') {
-                  <td>{{item.last_name}}</td>
-                }
-                @case ('Email') {
-                  <td>{{item.email}}</td>
-                }
-                @case ('Active') {
-                  <td>{{item.active | humanizeBoolean}}</td>
-                }
-                @case ('Featuring') {
-                  <td>
-                    @for (feature of item.features; track feature.id; let fIndex = $index) {
-                      {{feature.name}}@if(fIndex != item.features.length - 1) {,}
-                    } @empty {
-                      /
-                    }
-                    }
-                @case ('Album') {
-                  <td>{{item.album ? item.album.name : '/'}}</td>
-                }
-                @case ('Plays') {
-                  <td>{{item.track_plays_count | number}}</td>
-                }
-                @case ('Explicit') {
-                  <td>{{item.explicit | humanizeBoolean}}</td>
-                }
-                @case ('Created at') {
-                  <td>{{item.created_at | date}}</td>
-                }
-                @case ('Updated at') {
-                  <td>{{item.updated_at | date}}</td>
-                }
-                @default {
-                  <td></td>
-                }
               }
-            }
-            <td>
-              <button mat-icon-button [matMenuTriggerFor]="moreMenu" class="more">
-                <mat-icon>more_horizontal</mat-icon>
-              </button>
-            </td>
-            <mat-menu #moreMenu=matMenu>
-              <button mat-menu-item (click)="openEditDialog(item)">
-                <mat-icon>edit</mat-icon>
-                Edit
-              </button>
-              <button mat-menu-item (click)="deleteItem(item)">
-                <mat-icon>delete</mat-icon>
-                Delete
-              </button>
-            </mat-menu>
-          </tr>
-        }
-      </tbody>
-    </table>
+              <td>
+                <button mat-icon-button [matMenuTriggerFor]="moreMenu" class="more">
+                  <mat-icon>more_horizontal</mat-icon>
+                </button>
+              </td>
+              <mat-menu #moreMenu=matMenu>
+                <button mat-menu-item (click)="openEditDialog(item)">
+                  <mat-icon>edit</mat-icon>
+                  Edit
+                </button>
+                <button mat-menu-item (click)="deleteItem(item)">
+                  <mat-icon>delete</mat-icon>
+                  Delete
+                </button>
+              </mat-menu>
+            </tr>
+          }
+        </tbody>
+      </table>
 
-    <div class="pagination">
-      <div class="info">
-        <p>Showing {{data?.from}} - {{data?.to}} of {{data?.total}}</p>
-      </div>
-      <!-- <button matRipple (click)="navigateToPreviousPage()" *ngIf="pagedResponse.prev_page_url">Previous page</button>-->
-      @for (page of data?.links; track page) {
-        @if (page.url) {
-          <button class="button" (click)="navigateTo(page.url)" mat-button [ngClass]="{'active-pagination' : page.active}">
-            <span [innerHTML]="page.label"></span>
-          </button>
+      <div class="pagination">
+        <div class="info">
+          <p>Showing {{data?.from}} - {{data?.to}} of {{data?.total}}</p>
+        </div>
+        <!-- <button matRipple (click)="navigateToPreviousPage()" *ngIf="pagedResponse.prev_page_url">Previous page</button>-->
+        @for (page of data?.links; track page) {
+          @if (page.url) {
+            <button class="button" (click)="navigateTo(page.url)" mat-button [ngClass]="{'active-pagination' : page.active}">
+              <span [innerHTML]="page.label"></span>
+            </button>
+          }
         }
-      }
-      <!-- <button matRipple (click)="navigateToNextPage()" *ngIf="pagedResponse.next_page_url">Next page</button>-->
-    </div>
-  } @else {
-    <div class="no-results">
-      <img src="assets/icons-svg/sad.svg"/>
-      <p>No results matching your criteria.</p>
-    </div>
-  }
-</div>
+        <!-- <button matRipple (click)="navigateToNextPage()" *ngIf="pagedResponse.next_page_url">Next page</button>-->
+      </div>
+    } @else {
+      <div class="no-results">
+        <img src="assets/icons-svg/sad.svg"/>
+        <p>No results matching your criteria.</p>
+      </div>
+    }
+  </div>
